Replaced List with Collection whenever applicable.
Added rule priority configuration.

Cleaned up tests